styles.css
body,
html{
	padding: 0;
	margin: 0;
	height: 100vh;
	background: rgb(17 24 39);
	color:#e5e7eb;

}

header{
	display: flex;
	padding: 0px 25px 0px 25px;
	justify-content: space-between;
	height: 10%;
	align-items: center;
	box-shadow: 2px 1px 10px #e5e7eb ;
	margin-bottom: 50px;
	

}

header > h1{
	font-size: 35px;
}

#layout{
	display: grid;
}

#layout> ul{
	display: grid;
	grid-template-columns: repeat(5, 2fr);
	grid-template-rows: repeat(4, 5fr);
	grid-gap: 100px;
	place-items: center;
	margin: 0;
	padding: 1%;

}

li:first-child{
	display:inline-block;
	background: rgb(176, 168, 168);
	border-radius: 5px;
	height: 350px;

}


li{	
	display:flex;
	flex-direction: column;
	list-style-type: none;
	background: linear-gradient(to right,rgb(43, 43, 43)93%,rgba(153, 151, 151) 94%,rgb(0, 0, 0) 95%,rgba(255,255,255)96%,rgb(0, 0, 0)97%,rgba(255,255,255)98%,rgb(0, 0, 0)99%,rgba(255,255,255)100%);
	border-radius: 10px 40px 30px 10px;
	height: 350px;
	width: 250px;
	text-align: center;
	z-index: 1;
	box-shadow: 2px 3px 20px rgba(0,0,0),
	-2px -3px 20px rgba(0,0,0);
	overflow: hidden;
}
button{
	width:10%;
	height:40%;
	border: none;
	padding: 2px;
	border-radius: 3px;
	font-weight: bold;
	background: rgb(226, 224, 224);
}

button:hover{
	background: rgb(169, 169, 169);
}

#inputWindow{
	display: flex;
	background-color: rgb(211, 211, 214);
	height: 400px;
	width: 270px;
	top: 10%;
	left: 42.5%;
	color: white;
	position: fixed;
	z-index: 2;
	flex-direction:column;
	gap: 10px;
	opacity: 0;
	border-radius: 1px 1px 0px 0px;
	animation: fadeIn 0.5s forwards;
}


@keyframes fadeIn{
	from {
	opacity:0;
	transform:scale(0,0)
}
	to {
	opacity:1;
	transform:scale(1,1);
	}
}

@keyframes fadeOut{
	from {
		opacity:1;
		transform:scale(1,1);
		}
	to {
	opacity:1;
	transform:scale(1,1);
	}
}

#submit{
	width: 100%;
	height: 100%;
	box-shadow: 1px 2px 10px rgb(0, 0, 0);

}
#remove{
	width: 100%;
	height: 100%;
}

input{
	outline: none;
	border: none;
}

input:focus{
	border: 5px solid #000000;
	transition: 0.5s;
	border-radius: 2px;
}


li:first-child:hover{
	background: rgb(220, 218, 218);

}

#plusDiv{
	display: flex;
	justify-content: center;
	align-items: center;
	height: 100%;
	width: 100%;
}

.removeBox{
	width: 60%;
	height: 10%;
	transform: rotate(50deg) translateX(5px) translateY(60px);
}

.pagesBox{
	margin-left: 100px;
	margin-top: 15px;
	font-size: 10px;
	width: 100px;
	height: 60px;
	text-align: right;

}

.titleBox{
	margin-left: 60px;
	margin-top: 15px;
	font-size: 10px;
	width: 167px;
	height: 60px;
	text-align: center;
	background:transparent;
	text-shadow: 0px 0px 10px;
}

.authorBox{
	margin-top: 15px;
	font-size: 10px;
	width: 200px;
	height: 60px;
	text-align: right;
}

.bookmark{
	display: flex;
	background:#000000 ;
	height: 15px;
	transform: rotate(90deg) translateX(-150px) translateY(80px);
	justify-content: space-evenly;
	align-items: center;
	z-index: -1;

}



#addPg , #removePg{
	display: flex;
	width:12px;
	height:15px;
	justify-content: center;
	align-items: center;
	text-align:center;
	background-color: rgb(211, 211, 214);


}

img{
	width: 10px;
	height: 10px;
	transform: rotate(90deg);
}

#pageDisplay{
	display: flex;
	background:rgb(211, 211, 214) ;
	z-index: 2;
	width: 100px;
	height: 100%;
	color: #000000;
	transform: rotate(180deg);
	font-size: 10px;
	justify-content:center;
	align-items: center;
}

#cancel, 
#resize{
	display: flex;
	width:20px;
	height:20px;
	border-radius: 100px 100px 100px 100px;

}

#cancel{
	background: linear-gradient(to right,rgba(255, 0, 0),rgb(144, 12, 12));
	transform: rotate(45deg);
}

#resize{
	background:linear-gradient(to right, rgb(15, 204, 78), rgb(19, 121, 53));
}

#inputHeader{
	display: flex;
	width: 100%;
	height: 2%;
	justify-content:space-between;
	
}

#boxOfInputs{
	display: flex;
	height: 80%;
	max-width: 100%;
	color: white;
	justify-content: center;
	align-items: center;
	flex-direction:column;
	gap: 10px;
	z-index: 1;

}

#boxOfInputs input{
	width:70%;
	height:10%;

}

#submitBox{
	display: flex;
	height: 20%;
	width: 100%;
	z-index: 1;
}


label{
	color: #000000;
	transform: translate(0%,0%);
	width:50%;
	max-width: 20%;
	
}

.webBlurred > *:not(#inputWindow){
	filter: blur(20px);
	pointer-events: none;
	user-select: none;
}

input::placeholder{
	color:red;
}

input{
	color: black;
}

.line{
	
	border:1px solid black;
	width:5%;
	height: 2%;
	background-color: black;
}

#lineBox{
	display: flex;
	justify-content: space-evenly;
	border: 1px solid red;
	position: absolute;
	height: 100%;
	width: 100%;
	z-index: 0;
}

